fix gaps between posts for mobiels

--- a/components/PostItem.module.css
+++ b/components/PostItem.module.css
@@ -9,6 +9,7 @@
   border: 2px solid var(--text-color);
   border-radius: var(--dialogue-radius);
   overflow: hidden;
+  margin-right: var(--sp-8);
 
   &:last-child::after {
     content: ' ';
@@ -21,7 +22,7 @@
   @media (--md) {
     width: 100%;
     max-width: none;
-    margin-right: 0 !important;
+    margin-right: 0;
 
     &:last-child::after {
       display: none;
